init Spotify Auth
