# PlaylistChaser.Api/swagger.json
@@ -210,6 +210,100 @@
           }
         }
       }
+    },
+    "/api/Spotify/LoginToSpotify": {
+      "post": {
+        "tags": [
+          "Spotify"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/Spotify/AcceptSpotifyCode": {
+      "get": {
+        "tags": [
+          "Spotify"
+        ],
+        "parameters": [
+          {
+            "name": "code",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/Spotify/check-authenticated": {
+      "post": {
+        "tags": [
+          "Spotify"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "boolean"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Spotify/get-login-url": {
+      "get": {
+        "tags": [
+          "Spotify"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string",
+                  "format": "uri"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "uri"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "uri"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -263,7 +357,7 @@
             "nullable": true
           },
           "mainSourceId": {
-            "$ref": "#/components/schemas/Sources"
+            "$ref": "#/components/schemas/SourceId"
           },
           "userId": {
             "type": "integer",
@@ -302,7 +396,7 @@
         },
         "additionalProperties": false
       },
-      "Sources": {
+      "SourceId": {
         "enum": [
           1,
           2
