# PlaylistChaser.Model/Playlist.cs
@@ -18,7 +18,7 @@ namespace PlaylistChaser.Model
         [Required]
         public PlaylistTypes PlaylistTypeId { get; set; }
         public string? Description { get; set; }
-        public Sources? MainSourceId { get; set; }
+        public SourceId? MainSourceId { get; set; }
         [Required]
         public int UserId { get; set; }
         [ForeignKey(nameof(UserId))]
